[package]
name = "dust_os"
version = "0.1.0"
authors = ["Christopher Davenport <chris@christopherdavenport.tech>"]

[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.3"
